Shade BouncyCastle dependency and remove it from pom.xml