@@ -20,9 +20,9 @@ package io.approov.service.okhttp;
 import android.util.Base64;
 import android.util.Log;
 
-import org.bouncycastle.asn1.ASN1InputStream;
-import org.bouncycastle.asn1.ASN1Integer;
-import org.bouncycastle.asn1.ASN1Sequence;
+import io.approov.internal.bouncycastle.asn1.ASN1InputStream;
+import io.approov.internal.bouncycastle.asn1.ASN1Integer;
+import io.approov.internal.bouncycastle.asn1.ASN1Sequence;
 
 import java.io.IOException;
 import java.math.BigInteger;
@@ -32,6 +32,7 @@ import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -239,7 +240,12 @@ public class ApproovDefaultMessageSigning implements ApproovServiceMutator {
                     Log.d(TAG, "InstallMessageSignature is empty - skipping message signing");
                     return request;
                 }
-                signature = Base64.decode(base64, Base64.NO_WRAP);
+                try {
+                    signature = Base64.decode(base64, Base64.NO_WRAP);
+                } catch (Exception e) {
+                    Log.d(TAG, "Failed to decode base64 signature - skipping message signing " + e);
+                    return request;
+                }
                 // decode the signature from ASN.1 DER format
                 try (ASN1InputStream asn1InputStream = new ASN1InputStream(signature)) {
                     ASN1Sequence sequence = (ASN1Sequence) asn1InputStream.readObject();
@@ -251,17 +257,34 @@ public class ApproovDefaultMessageSigning implements ApproovServiceMutator {
                         System.arraycopy(rBytes, 0, signature, 0, rBytes.length);
                         System.arraycopy(sBytes, 0, signature, rBytes.length, sBytes.length);
                     } else {
-                        throw new IllegalStateException("Not an ASN1Sequence");
+                        Log.d(TAG, "Not an ASN1Sequence - skipping message signing");
+                        return request;
                     }
                 } catch (Exception e) {
-                    throw new IllegalStateException("Failed to decode ASN.1 DER ES256 signature", e);
+                    Log.d(TAG, "Failed to decode ASN.1 DER ES256 signature - skipping message signing", e);
+                    return request;
                 }
                 break;
             }
             case ALG_HS256: {
                 sigId = "account";
-                String base64 = ApproovService.getAccountMessageSignature(message);
-                signature = Base64.decode(base64, Base64.NO_WRAP);
+                String base64;
+                try {
+                    base64 = ApproovService.getAccountMessageSignature(message);
+                } catch (ApproovException e) {
+                    Log.d(TAG, "Failed to get AccountMessageSignature - skipping message signing " + e);
+                    return request;
+                }
+                if (base64.isEmpty()) {
+                    Log.d(TAG, "AccountMessageSignature is empty - skipping message signing");
+                    return request;
+                }
+                try {
+                    signature = Base64.decode(base64, Base64.NO_WRAP);
+                } catch (Exception e) {
+                    Log.d(TAG, "Failed to decode base64 signature - skipping message signing " + e);
+                    return request;
+                }
                 break;
             }
             default:
@@ -274,9 +297,9 @@ public class ApproovDefaultMessageSigning implements ApproovServiceMutator {
         // would better
         // fit the data.
         String signatureBase64 = Base64.encodeToString(signature, Base64.NO_WRAP);
-        String sigHeader = Dictionary.valueOf(Map.of(
+        String sigHeader = Dictionary.valueOf(Collections.singletonMap(
                 sigId, StringItem.valueOf(signatureBase64))).serialize();
-        String sigInputHeader = Dictionary.valueOf(Map.of(
+        String sigInputHeader = Dictionary.valueOf(Collections.singletonMap(
                 sigId, params.toComponentValue())).serialize();
 
         // Debugging - log the message and signature-related headers
@@ -297,7 +320,7 @@ public class ApproovDefaultMessageSigning implements ApproovServiceMutator {
                 MessageDigest digestBuilder = MessageDigest.getInstance("SHA-256");
                 digestBuilder.reset();
                 byte[] digest = digestBuilder.digest(message.getBytes(StandardCharsets.UTF_8));
-                String digestHeader = Dictionary.valueOf(Map.of(
+                String digestHeader = Dictionary.valueOf(Collections.singletonMap(
                         DIGEST_SHA256, ByteSequenceItem.valueOf(digest))).serialize();
                 signedBuilder.addHeader("Signature-Base-Digest", digestHeader);
             } catch (NoSuchAlgorithmException e) {
@@ -563,7 +586,7 @@ public class ApproovDefaultMessageSigning implements ApproovServiceMutator {
                     return false;
             }
             // generate the header value
-            Dictionary digestHeader = Dictionary.valueOf(Map.of(
+            Dictionary digestHeader = Dictionary.valueOf(Collections.singletonMap(
                     bodyDigestAlgorithm, ByteSequenceItem.valueOf(digest.toByteArray())));
 
             // add the digest to the request
